# microstructure

./: .gitignore  CMakeLists.txt  CMakeLists_hawkes.txt  Dockerfile_hawkes  benchmark.cpp  build_and_deploy_hawkes.sh  cuda_ipc_api.h  distributed_gpu_scheduler.cu  distributed_gpu_scheduler.h  docker-compose_hawkes.yml  example_usage.cpp  hawkes_c_api.cpp  hawkes_engine.cpp  hawkes_engine.h  hawkes_gpu_kernels.cu  hawkes_gpu_kernels.cu.OLD  hawkes_gpu_kernels.h  hawkes_gpu_kernels_4gpu_distributed.cu  hawkes_plotly_visualizer_fixed.py  hawkes_python_wrapper.py  hawkes_simd_processors.cpp  hawkes_simd_processors.h  python_binding.cpp  test_hawkes.cpp
